--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,26 @@
 on: [push]
 
 jobs:
-  build_docs_job:
-    if: (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/themed')
-    runs-on: ubuntu-latest
+  build_docs_job:     
+    if: (github.repository == 'DavidLeoni/jupman') && ((github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/themed'))
+    runs-on: ubuntu-18.04
     name: Build docs    
     steps:   
     - name: Install deps
       run: |
         sudo apt-get install tree
     - name: sets environment 
-      run: |        
-        echo "::set-env name=GIT_TAG::${GITHUB_REF##*/}"
-        echo "::set-env name=VERSION::${GITHUB_REF##*/}"
-        echo "::set-env name=LANGUAGE::en"        
+      run: |
+        echo "GIT_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        echo "LANGUAGE=en" >> $GITHUB_ENV                
     - name: apply docs version renaming
       if: env.GIT_TAG == 'master'
-      run: echo "::set-env name=VERSION::latest"
+      run: echo "VERSION=latest" >> $GITHUB_ENV
     - name: sets WEB_PATH
-      run: echo "::set-env name=WEB_PATH::${{env.LANGUAGE}}/${{env.VERSION}}"
+      run: echo "WEB_PATH=${{env.LANGUAGE}}/${{env.VERSION}}" >> $GITHUB_ENV
     - name: Run Sphinx in RTD docker      
-      uses: DavidLeoni/readthedocs-to-actions@v1.0
+      uses: DavidLeoni/readthedocs-to-actions@v1.2
       with:
         RTD_PRJ_NAME: jupman        
         GIT_URL: https://github.com/${{ github.repository }}.git
@@ -40,8 +40,17 @@ jobs:
         
         mkdir -p gh-pages/${{ env.WEB_PATH }}
         cp -r $GITHUB_WORKSPACE/html/* gh-pages/${{ env.WEB_PATH }}
-        cp -r $GITHUB_WORKSPACE/epub/*.epub gh-pages/${{ env.WEB_PATH }}
-        cp -r $GITHUB_WORKSPACE/latex/*.pdf gh-pages/${{ env.WEB_PATH }}
+        if compgen -G "$GITHUB_WORKSPACE/latex/*.pdf" > /dev/null; then
+             cp -r $GITHUB_WORKSPACE/latex/*.pdf gh-pages/${{ env.WEB_PATH }}
+        else
+             echo "ERROR: NO PDF FILES WHERE GENERATED!"
+        fi
+        if compgen -G "$GITHUB_WORKSPACE/epub/*.epub" > /dev/null; then
+             cp -r $GITHUB_WORKSPACE/epub/*.epub gh-pages/${{ env.WEB_PATH }}
+        else
+             echo "ERROR: NO EPUB FILES WHERE GENERATED!"
+        fi
+
         # note: html zip is already provided by Github
         cd gh-pages        
         git config --local user.email "action@github.com"
@@ -53,7 +62,7 @@ jobs:
         # The above command will fail if no changes were present, so we ignore
         # the return code.
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@v0.6.0
       with:
         branch: gh-pages
         directory: gh-pages
